# n8n_agents

./: .gitignore  README.md  context.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
n8n_agents/: .env.example
n8n_agents/apps/accounts/: admin.py  apps.py  models.py
n8n_agents/apps/accounts/api/: serializers.py  urls.py  views.py
n8n_agents/apps/accounts/management/commands/: create_superuser.py
n8n_agents/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
n8n_agents/apps/conversationhistories/: __init__.py  admin.py  apps.py  models.py
n8n_agents/apps/conversationhistories/migrations/: 0001_initial.py
n8n_agents/apps/equipments/: __init__.py  admin.py  apps.py  models.py
n8n_agents/apps/equipments/api/: serializers.py  urls.py  views.py
n8n_agents/apps/equipments/fixtures/: equipments.json
n8n_agents/apps/equipments/migrations/: 0001_initial.py
n8n_agents/apps/utils/: models.py
n8n_agents/core/: settings.py  timezone_patch.py  urls.py  wsgi.py
